# ShovelOfHopeRemake

./: .gitmodules  CMakeLists.txt  CMakePresets.json  Engine.sln  README.md
Engine/: CMakeLists.txt  Engine.vcxproj  Engine.vcxproj.filters  Texture.cpp  Vector2f.cpp  Vector2f.h  structs.h  vcpkg.json
Engine/CMake/: Libraries.cmake
Engine/Include/: myutils.h  utils.h
Engine/Source/: BaseGame.cpp  myutils.cpp  structs.cpp  utils.cpp
Libraries/SDLMain/SDL2-2.26.3/include/: SDL_events.h
Resources/Audio/: LevelAudio.mp3.import
Resources/HUD/: Font.ttf.import
Resources/Sound Effects/: 2xgravelblock_break.mp3.import  2xgravelblock_damage.mp3.import  airship_bell.mp3.import  alchemycoin_bounce.mp3.import  alchemycoin_explode.mp3.import  amb_morning.mp3.import  amb_night.mp3.import  amb_troupple.mp3.import  anglerfish_die.mp3.import  anglerfish_kids.mp3.import  anglerfish_pain_01.mp3.import  anglerfish_pain_02.mp3.import  anglerfish_rush.mp3.import  axolongle_hit.mp3.import  banner_unfurl.mp3.import  baz_whip.mp3.import  beetle_flip.mp3.import  beetle_land.mp3.import  birder_death.mp3.import  birder_laugh.mp3.import  birder_screamdash.mp3.import  birder_warp.mp3.import  blackknight_downthrust.mp3.import  blackknight_downthrust_impact.mp3.import  blackknight_fireball.mp3.import  blackknight_laugh.mp3.import  blackknight_meteor.mp3.import  blackknight_rearback_charge.mp3.import  blackknight_transform.mp3.import  blitzsteed_whoosh.mp3.import  blob_throw.mp3.import  bomb_explode.mp3.import  bomb_land.mp3.import  boneclang_swing.mp3.import  bonus_ring.mp3.import  book_open.mp3.import  book_platforms_timeout.mp3.import  bookplatform_disappear.mp3.import  boss_die.mp3.import  boss_door_lock.mp3.import  (+538 more)
Shovel Knight - Shovel of Hope/: Background.cpp  Beeto.h  Blorb.cpp  Boneclang.cpp  Bubble.cpp  Camera.cpp  Camera.h  CheckPoint.cpp  CheckPoint.h  Destructive.h  DestructiveBlock.h  DigClod.h  DigPile.h  DirtBlock.cpp  DirtBlockSmall.h  Divedrake.cpp  Divedrake.h  Dozedrake.cpp  DynamicCollider.h  Game.cpp  Game.h  HUD.h  HitBox.cpp  HitBox.h  HurtBox.cpp  Interactor.h  KinematicCollider.cpp  Ladder.h  LevelManager.cpp  LevelManager.h  MovingPlatform.cpp  Particle.cpp  Particle.h  Pickupper.h  Platter.cpp  Rigidbody.cpp  SVGDeathZone.cpp  SVGDeathZone.h  SVGPolygon.h  Shovel Knight - Shovel of Hope.vcxproj  (+6 more)
Source/: Background.h  Beeto.cpp  Blorb.cpp  Blorb.h  Boneclang.cpp  Boneclang.h  Bubble.cpp  Bubble.h  Camera.cpp  CheckPoint.cpp  Clod.cpp  Clod.h  Destructive.cpp  DestructiveBlock.cpp  DigClod.cpp  DigPile.cpp  DirtBlock.cpp  DirtBlock.h  DirtBlockSmall.cpp  Divedrake.cpp  Dozedrake.cpp  Dozedrake.h  DynamicCollider.cpp  FX.cpp  FX.h  GameObject.cpp  GameObject.h  GameObjectManager.cpp  GameObjectManager.h  HUD.cpp  HurtBox.h  InputManager.cpp  InputManager.h  Interactable.cpp  Interactable.h  Interactor.cpp  KinematicCollider.h  Ladder.cpp  LevelManager.cpp  MovingPlatform.cpp  (+20 more)
